--- a/tex/1.tex
+++ b/tex/1.tex
@@ -493,8 +493,7 @@ u0 = Expression("1 + x[0]*x[0] + 2*x[1]*x[1]")
 \end{python}
 
 The information about where to apply the \emp{u0} function as boundary
-condition is coded in a function \emp{u0\_boundary}: \index{boundary
-specification (function)}
+condition is coded in a function \emp{u0\_boundary}:
 \begin{python}
 def u0_boundary(x, on_boundary):
     return on_boundary
@@ -2576,7 +2575,7 @@ this modification.
 
 \section{Nonlinear problems}
 \label{langtangen:poisson:nonlinear}
-\label{partial differential equation!nonlinear}
+\index{partial differential equation!nonlinear}
 
 Now we shall address how to solve nonlinear PDEs in \fenics. Our
 sample PDE for implementation is taken as a nonlinear Poisson
@@ -3755,7 +3754,7 @@ conditions.
 
 The size of a 3D box is taken as $W \times W \times D$, where
 $D$ is the depth and $W=D/2$ is the width.  \index{heterogeneous
-media}\index{multi-material domain} We give the degree of the basis
+medium}\index{multi-material domain} We give the degree of the basis
 functions at the command-line, then $D$, and then the divisions of the
 domain in the various directions.  To make a box, rectangle, or interval
 of arbitrary (not unit) size, we have the \dolfin{} classes \emp{Box},
@@ -4101,7 +4100,7 @@ the mesh is mapped since one can then conceptually work with the sides
 in a pure rectangle.
 
 \section{Handling domains with different materials}
-\index{heterogeneous media}\index{multi-material domain}
+\index{heterogeneous medium}\index{multi-material domain}
 
 Solving PDEs in domains made up of different materials is a frequently
 encountered task. In \fenics, these kind of problems are handled by
