--- a/tex/17.tex
+++ b/tex/17.tex
@@ -483,7 +483,7 @@ the manuals of \ufl{} and the form compilers.
 \index{facet normal}
 \index{form!argument of}
 \index{basis function}
-\index{coefficient function}
+\index{coefficient}
 
 Most of \ufl{} deals with how to declare expressions such as the
 integrand expressions in Equation~\ref{ufl:eq:form_integrals}.  The most
@@ -582,7 +582,6 @@ f0, f1 = Coefficients(V)
 \index{index notation}
 \index{implicit summation}
 \index{\emp{Index}}
-\index{\emp{indices}}
 \index{\emp{IndexSum}}
 \index{\emp{Indexed}}
 \index{\emp{ComponentTensor}}
