--- a/tex/21.tex
+++ b/tex/21.tex
@@ -8,6 +8,8 @@
                Harish Narayanan and Mikael Mortensen}
               {kvs-1}
 
+\index{incompressible Navier--Stokes equations}
+
 \newcommand{\css}[1]{$\mathrm{CSS}_{#1}$}
 
 \newcommand{\scheme}[3]{%
