--- a/tex/22.tex
+++ b/tex/22.tex
@@ -11,6 +11,7 @@
               {Mikael Mortensen, Kent-Andre Mardal and Hans Petter Langtangen}
               {mortensen}
 
+\index{incompressible Navier--Stokes equations}
 \index{transition to turbulence}
 
 %------------------------------------------------------------------------------
