--- a/tex/23.tex
+++ b/tex/23.tex
@@ -4,6 +4,7 @@
               {Kristian Valen-Sendstad, Kent-Andre Mardal and Anders Logg}
               {kvs-2}
 
+\index{incompressible Navier--Stokes equations}
 \index{hemodynamics}
 
 Computational fluid dynamics (CFD) is a tool with great potential in
