--- a/tex/24.tex
+++ b/tex/24.tex
@@ -4,6 +4,7 @@
               {Susanne St\o le-Hentschel, Svein Linge, Alf Emil L{\o}vgren and Kent-Andre Mardal}
               {hentschel}
 
+\index{incompressible Navier--Stokes equations}
 \index{cerebrospinal fluid flow}
 
 This chapter concerns the flow of cerebrospinal fluid (CSF) in the
