--- a/tex/27.tex
+++ b/tex/27.tex
@@ -196,7 +196,7 @@ Lagrangian description by elastic materials with suitably chosen
 stress responses.
 
 \subsection{Accounting for different materials}
-\index{material models}
+\index{material model}
 
 It is important to reiterate that \eqref{eq:narayanan:balance%
 -of-momentum} is valid for all materials. In order to differentiate
