--- a/tex/28.tex
+++ b/tex/28.tex
@@ -7,6 +7,7 @@
 \index{Unicorn}
 \index{fluid--structure interaction}
 \index{turbulent flow}
+\index{incompressible Navier--Stokes equations}
 
 The FEniCS Project aims towards the goals of generality, efficiency,
 and simplicity, concerning mathematical methodology, implementation
