--- a/tex/29.tex
+++ b/tex/29.tex
@@ -4,6 +4,7 @@
               {Kristoffer Selim}
               {selim}
 
+\index{incompressible Navier--Stokes equations}
 \index{fluid--structure interaction}
 
 %% My commands
