--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -168,3 +168,4 @@ Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
 \index{CSS|see{consistent splitting scheme}}
 \index{LBB conditions|see{Ladyzhenskaya--\babuska{}--Brezzi conditions}}
 \index{multilinear form|see{form}}
+\index{Navier--Stokes|see{incompressible Navier--Stokes equations}}
