More pagebreak fixes

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -1947,6 +1947,7 @@ the contour values can be seen in the plot.
 
 Other functions for visualizing 2D scalar fields are \emp{surf} and
 \emp{mesh} as known from MATLAB:
+\pagebreak
 \begin{python}
 import scitools.easyviz as ev
 ev.figure()
@@ -2286,7 +2287,6 @@ An alternative to is explicitly call functions for assembling the
 coefficient matrix $A$ and the right-side vector $b$, and then solve
 the linear system $AU=b$ with respect to the $U$ vector.
 Instead of \emp{solve(a == L, u, b)} we now write\index{\emp{assemble}}\index{linear system}
-\pagebreak
 \begin{python}
 A = assemble(a)
 b = assemble(L)
@@ -2363,7 +2363,6 @@ do computations on this matrix, such as computing the eigenvalues
 \emp{A} and \emp{b} to file in MATLAB format and invoke MATLAB or Octave to
 analyze the linear system.
 Dumping the arrays \emp{A} and \emp{b} to MATLAB format is done by
-\pagebreak
 \begin{python}
 import scipy.io
 scipy.io.savemat("Ab.mat", {"A": A, "b": b})
@@ -2870,6 +2869,7 @@ Laplace equation $\Delta u^0 =0$. The recipe for solving this
 problem appears in Sections~\ref{langtangen:poisson1:varform},
 \ref{langtangen:poisson1:impl}, and \ref{langtangen:poisson1:DN}.
 The code for computing $u^0$ becomes as follows:
+\enlargethispage{12pt}
 \begin{python}
 tol = 1E-14
 def left_boundary(x, on_boundary):
@@ -3852,7 +3852,6 @@ current time level, and let \emp{T\_1} be the corresponding function
 at one earlier time level.
 We are now ready to define the initial condition and the \emp{a} and
 \emp{L} forms of our problem:
-\pagebreak
 \begin{python}
 T_1 = interpolate(Constant(T_R), V)
 
