Final pagebreak fixes I hope

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -3852,6 +3852,7 @@ current time level, and let \emp{T\_1} be the corresponding function
 at one earlier time level.
 We are now ready to define the initial condition and the \emp{a} and
 \emp{L} forms of our problem:
+\pagebreak
 \begin{python}
 T_1 = interpolate(Constant(T_R), V)
 
