--- a/tex/24.tex
+++ b/tex/24.tex
@@ -300,6 +300,7 @@ def get_pulse_input_function(V, z_index, factor, A, HR_inv, HR, b, f1):
     return pulse
 \end{python}
 The following parameters have been used with this function.
+\enlargethispage{12pt}
 \begin{python}
 A = 2.9/16
 factor = self.flow_per_unit_area/0.324
@@ -754,7 +755,6 @@ According to \citet{LothYardimciAlperin2001,AlperinMazdaLichtorEtAl2006},
 the present flow is inertia dominated, meaning that the shape of the
 cross section should not influence the pressure gradient. Changing the
 length of vectors describing the ellipse from
-\pagebreak
 \begin{anycode}
 c = 0.4;
 d = 0.4;
