Add "FEniCS Manual" as excerpt (Chapters 1, 2, 10, 17) of book

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{Logg2007a,
+  journal = {Arch. Comput. Methods Eng.},
+  number = {2},
+  volume = {14},
+  year = {2007},
+  pages = {93--138},
+  author = {Anders Logg},
+  title = {Automating the Finite Element Method},
+}
+
 @article{PanditKalitaDalal2007,
   title={A transient higher order compact scheme for incompressible viscous flows on geometries beyond rectangular},
   author={S. K. Pandit and J. C. Kalita and D. C Dalal},
@@ -4852,7 +4862,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   journal = {American Journal of Neuroradiology},
   year = {2011},
   volume = {32},
-  number = {8}, 
+  number = {8},
   pages = {1474--1481}
 }
 
