Consistency fix in chapter heading in Chapter 10

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -1,6 +1,6 @@
-\fenicschapter{DOLFIN: A C++/Python finite element library}
-              {DOLFIN: A C++/Python finite element library}
-              {DOLFIN: A C++/Python finite element library}
+\fenicschapter{DOLFIN: a C++/Python finite element library}
+              {DOLFIN: a C++/Python finite element library}
+              {DOLFIN: a C++/Python finite element library}
               {Anders Logg, Garth N. Wells and Johan Hake}
               {logg-2}
 
