Add note about location of tutorial examples

--- a/README
+++ b/README
@@ -25,14 +25,11 @@ This is the source code for the "FEniCS Book".
 
   https://launchpad.net/fenics-book
 
-* The plan forward is:
+* Tutorial example files reside in 3 different repositories:
 
-  1. Submission to publisher
-  2. Proofreading / production by publisher (check TODO file for comments)
-  3. Checking of proofs by all authors (check TODO file for comments)
-  4. Production of final book by publisher
+  This repository (the book)
+  The DOLFIN repository (as unit tests)
+  The FEniCS Web repository (as book resources)
 
-  Note that during step 3, all authors will need to check all their code
-  examples and make sure that they work with the latest version of the
-  FEniCS interface (1.0). Authors will then also need to add items to the
-  book index if missing.
+  In addition, it also resides in Hans Petter's SVN repository...
+  All changes should be made there and copied to the above locations
