Apply patch from HPL to fix two typos in Chapter 1

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -732,7 +732,7 @@ prm["maximum_iterations"] = 1000
 \end{python}
 Stopping criteria for Krylov solvers usually involve the norm of
 the residual, which must be smaller than the absolute tolerance
-parameter and smaller than the relative tolerance parameter times
+parameter \emph{or} smaller than the relative tolerance parameter times
 the initial residual.
 
 To see the number of actual iterations to reach the stopping criterion,
@@ -2286,7 +2286,7 @@ assemble the linear system and solve it.
 An alternative to is explicitly call functions for assembling the
 coefficient matrix $A$ and the right-side vector $b$, and then solve
 the linear system $AU=b$ with respect to the $U$ vector.
-Instead of \emp{solve(a == L, u, b)} we now write\index{\emp{assemble}}\index{linear system}
+Instead of \emp{solve(a == L, u, bc)} we now write\index{\emp{assemble}}\index{linear system}
 \begin{python}
 A = assemble(a)
 b = assemble(L)
