Change VectorElement --> VectorFunctionSpace on page 197, fixing bug #893029

--- a/tex/10.tex
+++ b/tex/10.tex
@@ -1844,7 +1844,7 @@ forms directly as part of a Python script:
 from dolfin import *
 
 mesh = UnitSquare(8, 8)
-V = VectorElement(mesh, "Lagrange", 1)
+V = VectorFunctionSpace(mesh, "Lagrange", 1)
 
 u = TrialFunction(V)
 v = TestFunction(V)
