Update Preface with GNU FDL licensing after discussion with Springer

--- a/tex/FM1.tex
+++ b/tex/FM1.tex
@@ -125,11 +125,19 @@ chapters in this book are accompanied by supplementary material in the
 form of code examples. These code examples can be downloaded from
 \url{http://fenicsproject.org/book/}.
 
+The software developed by the FEniCS Project is free for all to use
+and modify (licensed under the GNU (L)GPL), and so is this
+book. Permission is granted to copy, distribute and/or modify this
+book under the terms of the GNU Free Documentation License, Version
+1.3 or any later version published by the Free Software Foundation. A
+copy of the license is included in the chapter entitled "GNU Free
+Documentation License".
+
 \vspace{1em}
 
 \noindent
 Anders Logg, Kent-Andre Mardal and Garth N. Wells \\*
-\emph{Oslo and Cambridge, October 2011}
+\emph{Oslo and Cambridge, November 2011}
 
 % Cross references
 \index{Dirichlet boundary condition|see{boundary condition}}
