Fixed minor typos in chapter 19

--- a/tex/19.tex
+++ b/tex/19.tex
@@ -24,7 +24,7 @@ makes application building on top of \dolfin more user friendly,
 but the Python interface also introduces additional complexity and
 new problems. We assume that the reader has basic knowledge of
 both C++ and Python. A suitable textbook on Python for scientific
-computing is \citet{Langtangen2008}, which cover both Python and its
+computing is \citet{Langtangen2008}, which covers both Python and its
 C interface.  SWIG, which is the software we use to wrap \dolfin, is
 well documented and we refer to the user manual that can be found on its
 web page~\citep{www:swig}. Finally, we refer to \citet{Langtangen2003b}
@@ -191,8 +191,8 @@ The above script will now report the same \emp{id} for all objects.
 No objects are created or deleted, and segmentation fault is avoided.
 
 \subsection{\emp{std::ostream \& operator<{}<}}%>>
-In C++, shift operators such as \emp{operator <<} are typically used
-to implement I/O, while in Python the \emp{\_str\_} method is used.
+In C++, shift operators such as \emp{operator<{}<} are typically used
+to implement I/O, while in Python the \emp{\_\_str\_\_} method is used.
 Therefore, SWIG ignores the shift operator, as it is likely not to perform
 as intended.  However, we can again use the \emp{\%extend} directive to
 make this operator available from Python by adding a \emp{\_\_str\_\_}
@@ -408,7 +408,7 @@ In \emp{typemaps.i} are typemaps and so called SWIG fragments (explained later),
 for the three primitive types:\emp{int}, \emp{dolfin::uint} and
 \emp{double}.
 
-The simplest typemap is an out-typemap for \emp{dolfin::uint} a
+The simplest typemap is an out-typemap for \emp{dolfin::uint}, a
 typedef of \emp{unsigned int}. This typemap is needed since Python
 does not have an equivalent of an \emp{unsigned int} type:
 \begin{swigcode}
@@ -426,7 +426,7 @@ need to specify that SWIG includes the definition of the macro in the
 wrapper file by using the \emp{fragment} argument to the \emp{typemap}
 directive.
 
-The next typemap is an in typemap for \emp{unsigned int}.
+The next typemap is an in-typemap for \emp{unsigned int}.
 \begin{swigcode}
 %typemap(in, fragment="Py_convert_uint") unsigned int
 {
@@ -477,7 +477,7 @@ functions, methods, and operators. Instead of writing one typemap for
 each primitive type we define a SWIG macro, which instantiates a
 typemap for a particular primitive type when it is called. Some of these
 typemaps are used frequently and can therefore produce a lot of
-code. To avoid code bloat most of the typemap code is place in the
+code. To avoid code bloat most of the typemap code is placed in the
 function
 \emp{convert\_numpy\_to\_}\-\emp{array\_no\_check(TYPE\_NAME)}, which
 is called by the actual typemap. The code is defined within a
